<resources>
    <string name="DeskPortal.Community.Errormsg.tags_duplicate">Tags cannot be duplicate</string>
    <string name="DeskPortal.Community.Errormsg.tags_reach_maximum">You cannot add more than 5 tags</string>
    <string name="DeskPortal.Community.Errormsg.tags_spl_characters">Special characters are not allowed in Tags</string>
    <string name="DeskPortal.Community.Label.add_tags_hint">Insert comma to add multiple tags</string>
    <string name="DeskPortal.Community.Label.followers">Followers</string>
    <string name="DeskPortal.Community.Label.sub_category">Sub-Category</string>
    <string name="DeskPortal.Community.Options.change_type">Change Type</string>
    <string name="DeskPortal.Community.Options.follow">Follow</string>
    <string name="DeskPortal.Community.Options.following">Following</string>
    <string name="DeskPortal.Community.Title.create_topic">Create Topic</string>
    <string name="DeskPortal.Community.Title.edit_topic">Edit Topic</string>
    <string name="DeskPortal.Community.add_topic_content_hint">Content text</string>
    <string name="DeskPortal.Community.forums_count_multiple">%s Forums</string>
    <string name="DeskPortal.Community.posts_count_multiple">%s Posts</string>
    <string name="DeskPortal.Community.sub_forum_filter.all">All</string>
    <string name="DeskPortal.Community.topic_filterLabel">All Posts</string>
    <string name="DeskPortal.Community.topic_status_ANALAYZING">Analyzing</string>
    <string name="DeskPortal.Community.topic_status_ANSWERED">Answered</string>
    <string name="DeskPortal.Community.topic_status_IMPLEMENTED">Implemented</string>
    <string name="DeskPortal.Community.topic_status_INPROGRESS">In Progress</string>
    <string name="DeskPortal.Community.topic_status_MAYBELATER">Maybe Later</string>
    <string name="DeskPortal.Community.topic_status_NEEDMOREINFO">Need More Info</string>
    <string name="DeskPortal.Community.topic_status_NOTAPROBLEM">Not a Problem</string>
    <string name="DeskPortal.Community.topic_status_SOLVED">Solved</string>
    <string name="DeskPortal.Community.topic_status_TEMPORARYFIX">Temporary Fix</string>
    <string name="DeskPortal.Community.topic_status_UNANSWERED">Unanswered</string>
    <string name="DeskPortal.Community.topic_status_UNDERREVIEW">Under Review</string>
    <string name="DeskPortal.Community.topic_status_UNSOLVED">Unsolved</string>
    <string name="DeskPortal.Community.topic_status_WILLNOTIMPLEMENT">Will Not Be Implemented</string>
    <string name="DeskPortal.Community.topic_status_WORKINGONIT">Working on It</string>
    <string name="DeskPortal.Community.topic_type_announcements">Announcements</string>
    <string name="DeskPortal.Community.topic_type_discussions">Discussions</string>
    <string name="DeskPortal.Community.topic_type_idea">Idea</string>
    <string name="DeskPortal.Community.topic_type_ideas">Ideas</string>
    <string name="DeskPortal.Community.topic_type_problem">Problem</string>
    <string name="DeskPortal.Community.topic_type_problems">Problems</string>
    <string name="DeskPortal.Community.topic_type_question">Question</string>
    <string name="DeskPortal.Community.topic_type_questions">Questions</string>
    <string name="DeskPortal.Dashboard.Heading">Customer Support</string>
    <string name="DeskPortal.Dashboard.addticket.description">Seek help from our agents</string>
    <string name="DeskPortal.Dashboard.addticket.title">Submit Ticket</string>
    <string name="DeskPortal.Dashboard.community.description">Find and share solutions with the user community</string>
    <string name="DeskPortal.Dashboard.community.title">Community</string>
    <string name="DeskPortal.Dashboard.gc.description">Discover answers by chatting with our smart bots</string>
    <string name="DeskPortal.Dashboard.gc.title">Chat</string>
    <string name="DeskPortal.Dashboard.helpcenter.description">Browse our extensive repository of help articles</string>
    <string name="DeskPortal.Dashboard.helpcenter.title">Knowledge Base</string>
    <string name="DeskPortal.Dashboard.livechat.title">Live Chat</string>
    <string name="DeskPortal.Dashboard.myticket.description">View and manage tickets that you submitted</string>
    <string name="DeskPortal.Dashboard.myticket.title">My Tickets</string>
    <string name="DeskPortal.Error.message.noInternet">No Internet connection</string>
    <string name="DeskPortal.Error.message.reload">Retry</string>
    <string name="DeskPortal.Errormsg.add_comment_failed">Failed to add comment</string>
    <string name="DeskPortal.Errormsg.article_downvote_failed">Failed to dislike the Article</string>
    <string name="DeskPortal.Errormsg.article_fetch_failed">Failed to fetch the Article</string>
    <string name="DeskPortal.Errormsg.article_upvote_failed">Failed to like the Article</string>
    <string name="DeskPortal.Errormsg.comment_empty">Enter comment description</string>
    <string name="DeskPortal.Errormsg.community_fetch_failed">Failed to fetch the community</string>
    <string name="DeskPortal.Errormsg.content_empty">Please enter content for your topic</string>
    <string name="DeskPortal.Errormsg.content_length_exceeds">Content length exceeds the limit</string>
    <string name="DeskPortal.Errormsg.custom_filed_empty">%s cannot be blank</string>
    <string name="DeskPortal.Errormsg.departments_fetch_failed">Failed to fetch Departments</string>
    <string name="DeskPortal.Errormsg.email_filed_empty">Email can not be blank</string>
    <string name="DeskPortal.Errormsg.feedback_empty">Feedback cannot be blank</string>
    <string name="DeskPortal.Errormsg.field_invalid">Enter a valid %s</string>
    <string name="DeskPortal.Errormsg.helpcenter_unavailable">The help center app is currently unavailable. Please contact the Administrator.</string>
    <string name="DeskPortal.Errormsg.invalid_email">Enter a valid email address.</string>
    <string name="DeskPortal.Errormsg.no_apps_found">There is no app to perform this Action</string>
    <string name="DeskPortal.Errormsg.reply_content_empty">Reply message cannot be blank</string>
    <string name="DeskPortal.Errormsg.server_error_general">Something went wrong.</string>
    <string name="DeskPortal.Errormsg.subject_empty">Enter Subject</string>
    <string name="DeskPortal.Errormsg.ticket_fetch_failed">Failed to fetch the Tickets</string>
    <string name="about_us">About Us</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_file">Edit</string>
    <string name="action_info_file_text">Info</string>
    <string name="action_open_file_text">Open</string>
    <string name="action_select_tag_text">Select Tag</string>
    <string name="action_share">Share</string>
    <string name="action_share_app">Share App</string>
    <string name="alias">Anti-Aliasing</string>
    <string name="all_documents">All</string>
    <string name="appChangelog">Change Log</string>
    <string name="app_info">App Info</string>
    <string name="app_name">A1Office - XLS, PPT, DOCX</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="author_info">Author Info</string>
    <string name="code">Source Code</string>
    <string name="dark_mode_settings_icon_text">Dark Mode</string>
    <string name="dark_pdf">Dark theme for PDF</string>
    <string name="document">Document</string>
    <string name="documents">Documents:</string>
    <string name="download_notification">Notification for download</string>
    <string name="email">Email</string>
    <string name="file_name">File Name</string>
    <string name="file_type">File Type</string>
    <string name="fling">Page Fling</string>
    <string name="fling_summary">Perform a quick swipe to jump directly to the next page</string>
    <string name="git">Github</string>
    <string name="intro">Replay Intro</string>
    <string name="libs">Open Source Libraries</string>
    <string name="logout">Logout</string>
    <string name="meta">File Info</string>
    <string name="myLicense">License</string>
    <string name="new_ui">New UI</string>
    <string name="ok">OK</string>
    <string name="path">Path</string>
    <string name="pdf_documents">PDF</string>
    <string name="pick_file">Pick File</string>
    <string name="pref_accent_color_summary">Accents select parts of the UI.</string>
    <string name="pref_accent_color_title">Accent color</string>
    <string name="pref_background_color_summary">The underlying color of the app’s content.</string>
    <string name="pref_background_color_title">Background color</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_colored_navigation_bar_summary">Apply the primary color to the navigation bar</string>
    <string name="pref_colored_navigation_bar_title">Navigation bar color</string>
    <string name="pref_primary_color_summary">Displayed most frequently across your app.</string>
    <string name="pref_primary_color_title">Primary color</string>
    <string name="pref_theme_summary">Select a pre-installed theme</string>
    <string name="pref_theme_title">Themes</string>
    <string name="print">Print</string>
    <string name="privacy">Privacy Policy</string>
    <string name="quality">High Quality Rendering</string>
    <string name="qualitysettings">Visual</string>
    <string name="scroll">Horizontal Scrolling</string>
    <string name="scrollsettings">Scrolling</string>
    <string name="setting_about_us">about_us</string>
    <string name="setting_app_version">app_version</string>
    <string name="setting_dark_mode">darkMode</string>
    <string name="setting_logout">log_out</string>
    <string name="setting_new_ui">new_ui</string>
    <string name="setting_share_app">share_app</string>
    <string name="settings">Settings</string>
    <string name="settings_notif_desc">Show notification whenever new document file is downloaded</string>
    <string name="share">Share</string>
    <string name="show_in_launcher">Show app in launcher</string>
    <string name="show_in_launcher_summary">You may need to restart your launcher for this option to take effect</string>
    <string name="snap">Page Snap</string>
    <string name="snap_summary">Center the view on the current page after each swipe</string>
    <string name="sodk_editor_copy_upper">COPY</string>
    <string name="sodk_editor_datetime_upper">DATE/TIME</string>
    <string name="sodk_editor_engineering_upper">ENGINEERING</string>
    <string name="sodk_editor_export_upper">EXPORT</string>
    <string name="sodk_editor_financial_upper">FINANCIAL</string>
    <string name="sodk_editor_first_page_upper">FIRST PAGE</string>
    <string name="sodk_editor_information_upper">INFORMATION</string>
    <string name="sodk_editor_last_page_upper">LAST PAGE</string>
    <string name="sodk_editor_logical_upper">LOGICAL</string>
    <string name="sodk_editor_lookup_upper">LOOKUP</string>
    <string name="sodk_editor_maths_upper">MATHS</string>
    <string name="sodk_editor_open_in_upper">OPEN IN</string>
    <string name="sodk_editor_open_pdf_in_upper">OPEN PDF IN</string>
    <string name="sodk_editor_print_upper">PRINT</string>
    <string name="sodk_editor_protect_upper">PROTECT</string>
    <string name="sodk_editor_reflow_upper">REFLOW</string>
    <string name="sodk_editor_save_as_upper">SAVE AS</string>
    <string name="sodk_editor_save_pdf_upper">SAVE PDF</string>
    <string name="sodk_editor_save_upper">SAVE</string>
    <string name="sodk_editor_share_upper">SHARE</string>
    <string name="sodk_editor_statistical_upper">STATISTICAL</string>
    <string name="sodk_editor_sum_upper">SUM</string>
    <string name="sodk_editor_text_upper">TEXT</string>
    <string name="text_files">Text Files</string>
    <string name="uri">Uri</string>
    <string name="xls_documents">XLS</string>
</resources>