<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" xmlns:aapt="http://schemas.android.com/aapt">
    <PreferenceCategory app:iconSpaceReserved="false" app:title="@string/settings">
        <SwitchPreferenceCompat app:iconSpaceReserved="false" app:key="setting_download_notification" app:summary="@string/settings_notif_desc" app:title="@string/download_notification"/>
        <SwitchPreferenceCompat app:iconSpaceReserved="false" app:isPreferenceVisible="false" app:key="@string/setting_dark_mode" app:title="@string/dark_mode_settings_icon_text"/>
        <SwitchPreferenceCompat app:iconSpaceReserved="false" app:isPreferenceVisible="false" app:key="@string/setting_new_ui" app:title="@string/new_ui"/>
    </PreferenceCategory>
    <PreferenceCategory app:iconSpaceReserved="false" app:title="Settings">
        <Preference app:iconSpaceReserved="false" app:key="@string/setting_share_app" app:title="@string/action_share_app"/>
        <Preference app:iconSpaceReserved="false" app:key="@string/setting_app_version" app:title="@string/app_version"/>
        <Preference app:iconSpaceReserved="false" app:key="@string/setting_about_us" app:title="@string/about_us"/>
        <Preference app:iconSpaceReserved="false" app:isPreferenceVisible="false" app:key="@string/setting_logout" app:title="@string/logout"/>
    </PreferenceCategory>
</PreferenceScreen>
