<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" xmlns:aapt="http://schemas.android.com/aapt">
    <SwitchPreference android:title="@string/show_in_launcher" android:key="show_in_launcher" android:summary="@string/show_in_launcher_summary" android:defaultValue="true"/>
    <PreferenceCategory android:title="@string/qualitysettings">
        <SwitchPreference android:title="@string/quality" android:key="quality_pref" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/alias" android:key="alias_pref" android:defaultValue="true"/>
        <SwitchPreference android:title="@string/dark_pdf" android:key="pdftheme_pref" android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/scrollsettings">
        <SwitchPreference android:title="@string/scroll" android:key="scroll_pref" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/snap" android:key="snap_pref" android:summary="@string/snap_summary" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/fling" android:key="fling_pref" android:summary="@string/fling_summary" android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
