<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="false" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="?android:attr/dividerHorizontal">
                <ImageView android:layout_gravity="center_horizontal" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginTop="40dp" android:src="@mipmap/ic_launcher"/>
                <TextView android:textSize="26sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/app_name" android:textAllCaps="false" android:fontFamily="@font/roboto_medium"/>
                <TextView android:textSize="16sp" android:layout_gravity="center_horizontal" android:id="@+id/versionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <TextView android:textSize="16sp" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_info" android:fontFamily="@font/roboto_medium"/>
            <TextView android:textSize="16sp" android:id="@+id/introView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/intro" android:drawablePadding="16dp" android:onClick="replayIntro" android:drawableStart="@drawable/replay_icon"/>
            <TextView android:textSize="16sp" android:id="@+id/changeView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/appChangelog" android:drawablePadding="16dp" android:onClick="showLog" android:drawableStart="@drawable/log_icon"/>
            <TextView android:textSize="16sp" android:id="@+id/licenseView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/myLicense" android:drawablePadding="16dp" android:onClick="showLicense" android:drawableStart="@drawable/license_icon"/>
            <TextView android:textSize="16sp" android:id="@+id/privacyView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/privacy" android:drawablePadding="16dp" android:onClick="showPrivacy" android:drawableStart="@drawable/privacy_icon"/>
            <TextView android:textSize="16sp" android:id="@+id/codeView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/code" android:drawablePadding="16dp" android:onClick="navToSourceCode" android:drawableStart="@drawable/code_icon"/>
            <TextView android:textSize="16sp" android:id="@+id/libView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/libs" android:drawablePadding="16dp" android:onClick="showLibraries" android:drawableStart="@drawable/lib_icon"/>
            <TextView android:textSize="16sp" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/author_info" android:fontFamily="@font/roboto_medium"/>
            <TextView android:textSize="16sp" android:id="@+id/emailView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/email" android:drawablePadding="16dp" android:onClick="emailDev" android:drawableStart="@drawable/email_icon"/>
            <TextView android:textSize="16sp" android:id="@+id/gitView" android:background="?attr/selectableItemBackground" android:padding="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/git" android:drawablePadding="16dp" android:onClick="navToGit" android:drawableStart="@drawable/github_icon"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
